<resources>
    <string name="app_name">ApnimandiAdmin</string>
    <string name="user">Users</string>
    <string name="product_category">Product Category</string>
    <string name="orders">Orders</string>
    <string name="admin">Admin</string>
    <string name="add">Add</string>
    <string name="items">Items</string>
    <string name="fruits">Fruits</string>
    <string name="select_picture">Select Picture</string>
    <string name="vegetables">Vegetables</string>
    <string name="please_check_internet_connectivity">Please check your internet connectivity.</string>
    <string name="snackbar_ok_message">OK</string>
    <string name="No_item_added_yet">No Item added yet.</string>
    <string name="all_fields_are_mandetory">All fields are mandetory.</string>
    <string name="please_select_image">Please select image.</string>
    <string name="delete_button_txt">Delete</string>
    <string name="item_id_not_found">Deleting failed. Item id not found.</string>
    <string name="item_deleted_successfully">Item is deleted successfully</string>
    <string name="update">Update</string>
    <string name="snacks">Snacks</string>
    <string name="protein">Protein</string>
    <string name="backing">Backing</string>
    <string name="item_removed_from_most_popular_section">Item successfully removed from most popular section.</string>
    <string name="Utils">Utils</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="add_delivery_fee">Apply Fee</string>
    <string name="delivery_fee_added">Delivery Fee Applied.</string>
    <string name="current_delivery_fee">Current Delivery Fee :</string>
    <string name="item_description_txt">Add Item Description</string>
    <string name="item_description">Item Description</string>
    <string name="item_calories">Item Calories</string>
    <string name="item_fat">Item Fat</string>
    <string name="item_protein">Item Protein</string>
    <string name="item_id">Item Id</string>
    <string name="item_cutOffPrice">Item Cut Off Price</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="item_weight">Item Weight With gm/kg</string>
    <string name="item_category">Item Category</string>
    <string name="item_details">Add Item Details</string>
    <string name="add_item">Add Item</string>
    <string name="item_delete">Delete</string>
    <string name="update_item">"Update Item : "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_order">New Order</string>
    <string name="order_status_updated">Order Status Updated.</string>
    <string name="order_cancelled">Order cancelled successfully.</string>
    <string name="order_accepted">Order accepted successfully.</string>
    <string name="ongoing_order">Ongoing Order</string>
    <string name="States">States</string>
    <string name="state_details">State Details</string>
    <string name="state_name">State Name</string>
    <string name="state_code">State Code</string>
    <string name="state_Abbreviation">State Abbreviation</string>
    <string name="delete_state">Delete State</string>
    <string name="add_district">Add District</string>
    <string name="district_details">District details</string>
    <string name="district_name">District Name</string>
    <string name="district_pin_code">District Pin Code</string>
    <string name="district_abbreviation">District Abbreviation</string>
    <string name="delete_district">Delete District</string>
    <string name="add_ward">Add Ward</string>
    <string name="districts">Districts</string>
    <string name="state_code_already_used">State already exists.</string>
    <string name="district_already_exists">District Already Exist.</string>
</resources>
